--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="grid2">
             <div class="composition">
               <img
-                src="img/nat-1-large.jpg"
+                src="img/nat-1.jpg"
                 alt=""
                 class="composition__photo composition--photo1"
               /><img
